# nextshows

./: CGUIScreenshots.md  ChangeLog.md  HowtoReportIssues.md  ProjectHome.md  README.md  WidgetScreenshots.md
Plasma/nextShows/: CMakeLists.txt  build.sh
Plasma/nextShows/src/dataengine/: CMakeLists.txt  nextshowsengine.cpp  nextshowsengine.h  tvrageparser.cpp  tvrageparser.h
SuperKaramba/nextShows/libs/: Data.py
branches/2.0/nextShows/: ChangeLog  maindata.xml
branches/2.1/nextShows/: launchGUI  maindata.xml  nextShows.theme  toolbox
nextShows/: CMakeLists.txt  ChangeLog  README  TODO  launchGUI  maindata.xml  nextShows.py  nextShows.theme  toolbox
nextShows/WorkFiles/ConfigGUI/: NextShowsConfig.ui
nextShows/WorkFiles/Tools/: testCache.py
nextShows/cgui/: FormatHelp.py  FormatHelp_ui.py  ListWidget.py  NextShowsConfig.py  NextShowsConfig_rc.py  NextShowsConfig_ui.py
nextShows/libs/: Applet.py  Cache.py  Config.py  Data.py  Globals.py  TvRage.py  tools.py
nextShows/src/: aboutdialog.cpp  aboutdialog.h  configdialog.cpp  configdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  nextShowsui.rc  nextshows.h  nextshowsmain.h  src.pro  systrayicon.cpp  systrayicon.h  version.h
nextShows/src/config/: configcategories.cpp  configdialog.cpp  configpanels.cpp  findshows.h
nextShows/src/debug/: showinfo_feed.cpp
nextShows/src/dialogs/: about.cpp  about.h  settings.cpp  settings.h
nextShows/src/libs/: abstractprovider.cpp  abstractprovider.h  animatedimage.cpp  cache.cpp  cache.h  datafetcher.cpp  datafetcher.h  dataprovider.cpp  dataprovider.h  dbinterface.cpp  dbinterface.h  fetchurl.cpp  fetchurl.h  getdata.cpp  getdata.h  getdatatvrage.h  tvrageparser.cpp  tvrageparser.h  tvrageprovider.cpp  tvrageprovider.h
nextShows/src/pics/: nextshows.qrc
nextShows/src/pixmaps/: nextshows.qrc
nextShows/src/settings/: categories.h  findshows.cpp  misc.cpp
nextShows/src/ui/: aboutdialog.ui  configdialog.ui  mainwindow.ui
nextShows/src/widgets/: nscreditscroller.cpp  nscreditscroller.h  nslineedit.cpp  nslineedit.h  nstreewidget.cpp  nstreewidget.h
nextShows_legacy/: TODO  maindata.xml
nextShows_legacy/libs/: Globals.py
playground/Cache/: Cache.pro
playground/Cache/src/: cache.cpp  cache.h  mainwindow.cpp  mainwindow.h
playground/Cache/ui/: mainwindow.ui
playground/ColorViewerWidget/: ColorViewerWidget.py  compile.sh  launch
playground/DbInterface/src/: dbinterface.cpp  dbinterface.h  mainwindow.cpp  nextshows.h
playground/Plasma/nextShows/src/applet/: CMakeLists.txt  plasma-applet-nextshows.desktop
playground/QNAM_test/: main.cpp  mainwindow.h
playground/ScrollTextTest/: form.cpp  form.h  form.ui  main.cpp  view.cpp  view.h
playground/TvRageSearch/: README
playground/TvRageSearch/src/: TvRageSearch.cpp  TvRageSearch.h  main.cpp  src.pro  tvragesearch.cpp  tvragesearch.h  tvragesearch_en.ts  tvragesearch_fr.ts
playground/brainstorming/diagrams/: data_retrieval_and_cache_diagram.odg  data_retrieval_cache.can  relationalModelCacheBD.odg
playground/plasma/dataengine/: build.sh  nextshowsengine.h  plasma-dataengine-nextshows.desktop
tags/2.0.0rc1/nextShows/: launchGUI  maindata.xml
tags/2.0.2/nextShows/: toolbox
tags/2.0.3/nextShows/: ChangeLog  maindata.xml
tags/2.0.4/nextShows/: maindata.xml
tags/2.1.0/nextShows/: launchGUI
tags/2.1.1/nextShows/: nextShows.py
tags/2.1.3/nextShows/: ChangeLog
tags/v2.0.0rc1/nextShows/: ChangeLog
trunk/Plasma/nextShows/src/applet/: CMakeLists.txt  nextshowsapplet.cpp  nextshowsapplet.h
trunk/Plasma/nextShows/src/dataengine/: CMakeLists.txt  build.sh  nextshowsengine.cpp  nextshowsengine.h  plasma-dataengine-nextshows.desktop  tvrageparser.h
trunk/nextShows/: CMakeLists.txt  ChangeLog  README  TODO  launchGUI  maindata.xml  nextShows.py  toolbox
trunk/nextShows/cgui/: FormatHelp.py  FormatHelp_ui.py  NextShowsConfig.py  NextShowsConfig_rc.py  NextShowsConfig_ui.py
trunk/nextShows/libs/: Applet.py  Cache.py  Data.py  Globals.py  Http.py  TvRage.py  tools.py
trunk/nextShows/src/: CMakeLists.txt  aboutdialog.cpp  configdialog.cpp  configdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  nextShowsui.rc  nextshows.h  nextshowsmain.cpp  nextshowsmain.h  src.pro  systrayicon.cpp  systrayicon.h
trunk/nextShows/src/config/: categories.cpp  categories.h  configcategories.h  configdialog.cpp  configdialog.h  configpanels.h  findshows.cpp  misc.cpp  misc.h
trunk/nextShows/src/config/ui/: misc.ui
trunk/nextShows/src/debug/: episodelist_feed.cpp
trunk/nextShows/src/dialogs/: about.cpp  about.h  settings.cpp  settings.h
trunk/nextShows/src/dialogs/settings/: categories.cpp  findshows.cpp  findshows.h  misc.cpp  misc.h  options.cpp  options.h
trunk/nextShows/src/dialogs/settings/ui/: findshows.ui  options.ui
trunk/nextShows/src/dialogs/ui/: aboutdialog.ui  settingsdialog.ui
trunk/nextShows/src/libs/: abstractprovider.cpp  abstractprovider.h  animatedimage.cpp  animatedimage.h  cache.cpp  cache.h  config.cpp  config.h  datafetcher.cpp  datafetcher.h  dataprovider.cpp  dataprovider.h  dbinterface.cpp  dbinterface.h  fetchurl.cpp  fetchurl.h  getdata.cpp  getdata.h  getdatatvrage.cpp  getdatatvrage.h  tvrageparser.cpp  tvrageparser.h  tvrageprovider.cpp  tvrageprovider.h
trunk/nextShows/src/pixmaps/: nextshows.qrc
trunk/nextShows/src/settings/: categories.h  findshows.cpp  findshows.h  misc.cpp  misc.h
trunk/nextShows/src/settings/ui/: findshows.ui
trunk/nextShows/src/ui/: aboutdialog.ui  configdialog.ui  mainwindow.ui  nextshows.ui
trunk/nextShows/src/widgets/: nscreditscroller.cpp  nscreditscroller.h  nslineedit.cpp  nslineedit.h  nslistwidget.cpp  nslistwidget.h  nstreewidget.cpp  nstreewidget.h
trunk/nextShows_legacy/: README.obsolete
trunk/nextShows_legacy/libs/: TvRage.py
trunk/playground/Cache/: Cache.pro
trunk/playground/Plasma/LayoutTestApplet/src/: CMakeLists.txt  layouttestapplet.cpp  layouttestapplet.h  plasma-applet-layouttestapplet.desktop
wiki/: CGUIScreenshots.wiki  ChangeLog.wiki  HowtoReportIssues.wiki  WidgetScreenshots.wiki
(+147 files in other folders)
